exercises/05_function_like/01_parsing/tests/fail/empty.rs
use parse_input_exercise::avg;

fn main() {
    // No arguments: there's nothing to average, so the macro reports an error.
    let _ = avg!();
}
